--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -58,13 +58,13 @@
           <div class="card-header" id="headingTwo">
             <h5 class="mb-0">
               <button class="btn btn-outline-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                The Community Board
+                The Community Articles
               </button>
             </h5>
           </div>
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body">
-              A board to host a collection of articles from industry practioners sharing their recent project experiences or researchers sharing their published scientific findings to provide our community of engineers and architects with insights and knowledge they can apply to their own projects.
+                A place where users create and post articles sharing their insights from recent project experiences or summarizing scientific findings in their published work to provide our community the latest developments in practice and research.
             </div>
           </div>
         </div>
