--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,9 +55,9 @@
         </li>
 
       <% end %>
-      <a href="#/lessons_learned" class="nav-link">
+      <a href="/articles" class="nav-link">
         <i class="fas fa-newspaper"></i>
-        Community Board</a>
+        Community Articles</a>
 <% unless current_page?("/")%>
       <li class="nav-item">
         <form class="form-inline my-2 my-lg-0" action="/guides">
