--- a/app/views/guide_templates/index.html.erb
+++ b/app/views/guide_templates/index.html.erb
@@ -45,7 +45,7 @@
         <p>If you are still unable to find a relevant guide, consider joining the community of contributors by creating the guide you are looking to find.</p>
       </h5>
     <% else %>
-      <table class="table">
+      <table class="table white-back">
         <tr>
           <th>
             <%= sort_link @q, :title, "Title" %>
