--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -124,7 +124,7 @@
 
     </div>
 
-    <h6 class="card-header text-white" style="background-color:#3E3F3A;  text-align: center;;">Featured Community Board Articles</h6>
+    <h6 class="card-header text-white" style="background-color:#3E3F3A;  text-align: center;;">Featured Community Articles</h6>
     <div class="container">
 
       <div class="row justify-content-center">
