--- a/app/views/article_templates/show.html.erb
+++ b/app/views/article_templates/show.html.erb
@@ -30,7 +30,7 @@
 
   <hr>
 
-  <dl>
+  <dl class="white-back" style="padding:10px">
     <dt>
     </dt>
     <dd>
@@ -64,11 +64,15 @@
     </dd>
 
   </dl>
-
-  <a href="/delete_article/<%= @article.id %>", data-confirm="Are you sure?">
-    Delete article
-  </a>
-
+  <% if current_user == nil %>
+  <% else %>
+    <% if @article.user_id == current_user.id %>
+      <a href="/delete_article/<%= @article.id %>", data-confirm="Are you sure?">
+        Delete article
+      </a>
+    <% else %>
+    <% end %>
+<% end %>
   <hr>
 
   <a href="/articles">
